policies/poststart-tcpsocket-host/containers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-tcpsocket-host-containers-namespace-optout-warn
spec:
  policyName: check-poststart-tcpsocket-host-containers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: poststart-tcpsocket-host-containers.pss.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-tcpsocket-host-containers-namespace-optin-warn
spec:
  policyName: check-poststart-tcpsocket-host-containers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: poststart-tcpsocket-host-containers.pss.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-tcpsocket-host-containers-namespace-optout-audit
spec:
  policyName: check-poststart-tcpsocket-host-containers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: poststart-tcpsocket-host-containers.pss.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-tcpsocket-host-containers-namespace-optin-audit
spec:
  policyName: check-poststart-tcpsocket-host-containers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: poststart-tcpsocket-host-containers.pss.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-tcpsocket-host-containers-namespace-optout-deny
spec:
  policyName: check-poststart-tcpsocket-host-containers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: poststart-tcpsocket-host-containers.pss.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-tcpsocket-host-containers-namespace-optin-deny
spec:
  policyName: check-poststart-tcpsocket-host-containers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: poststart-tcpsocket-host-containers.pss.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
