policies/poststart-tcpsocket-host/containers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-poststart-tcpsocket-host-containers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        object.spec.containers.all(c,
          !has(c.lifecycle) ||
          !has(c.lifecycle.postStart) ||
          !has(c.lifecycle.postStart.tcpSocket) ||
          !has(c.lifecycle.postStart.tcpSocket.host) ||
          c.lifecycle.postStart.tcpSocket.host == ""
        )
      message: >
        spec.containers[*].lifecycle.postStart.tcpSocket.host must be undefined or empty ("").
